compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_type_var_in_alias2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: type X = List(a)

---
error: Unknown type
  ┌─ /src/one/two.gleam:1:15
  │
1 │ type X = List(a)
  │               ^ did you mean `Int`?

The type `a` is not defined or imported in this module.

